--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li><a href="login.html" class="hover:text-blue-600 flex items-center"><i data-lucide="user" class="mr-2 w-4 h-4"></i>Login / Signup</a></li>
         <li><a href="profile.html" class="hover:text-blue-600 flex items-center"><i data-lucide="user-circle" class="mr-2 w-4 h-4"></i>Profile</a></li>
         <li><a href="job.html" class="hover:text-blue-600 flex items-center"><i data-lucide="briefcase" class="mr-2 w-4 h-4"></i>Job</a></li>
-        <li><a href="" class="hover:text-blue-600 flex items-center"><i data-lucide="line-chart" class="mr-2 w-4 h-4"></i>Market Analysis</a></li>
+        <li><a href="market.html" class="hover:text-blue-600 flex items-center"><i data-lucide="line-chart" class="mr-2 w-4 h-4"></i>Market Analysis</a></li>
         <li><a href="resume.html" class="hover:text-blue-600 flex items-center"><i data-lucide="file-text" class="mr-2 w-4 h-4"></i>Resume</a></li>
         <li><a href="dashbord.html" class="hover:text-blue-600 flex items-center"><i data-lucide="layout-dashboard" class="mr-2 w-4 h-4"></i>Dashboard</a></li>
         <li><a href="skills.html" class="hover:text-blue-600 flex items-center"><i data-lucide="activity" class="mr-2 w-4 h-4"></i>Skill Assessment</a></li>
