--- a/dashbord.html
+++ b/dashbord.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard | NEXT ROLE</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
-<body class="bg-blue-50 min-h-screen flex">
+<body class="bg-blue-50 min-h-screen flex flex-col md:flex-row font-sans">
 
   <!-- Sidebar -->
-  <aside class="w-64 bg-white border-r min-h-screen shadow-lg hidden md:flex flex-col">
+  <aside class="w-full md:w-64 bg-white border-r shadow-lg flex-shrink-0">
     <div class="text-blue-700 text-2xl font-bold p-6">NEXT ROLE</div>
-    <nav class="flex-grow px-4 space-y-3">
+    <nav class="flex flex-col space-y-3 px-4">
       <a href="dashboard.html" class="flex items-center text-blue-600 font-semibold p-2 rounded-lg bg-blue-100">
         <i data-lucide="layout-dashboard" class="w-5 h-5 mr-2"></i> Dashboard
       </a>
@@ -40,62 +40,143 @@
     </nav>
   </aside>
 
-<!-- Dashboard Cards -->
-<main class="flex-grow p-6">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-  
-      <!-- Resume Score -->
-      <a href="resume-score.html" class="bg-white rounded-lg p-4 shadow hover:shadow-md transition block h-40">
-        <i data-lucide="file-check" class="w-6 h-6 text-blue-600 mb-1"></i>
-        <h3 class="text-md font-semibold text-gray-800 mb-1">Resume Score</h3>
-        <p class="text-sm text-gray-600">Check how strong your resume is and get suggestions.</p>
-      </a>
-  
-      <!-- Skill Assignment -->
-      <a href="skills.html" class="bg-white rounded-lg p-4 shadow hover:shadow-md transition block h-40">
-        <i data-lucide="list" class="w-6 h-6 text-blue-600 mb-1"></i>
-        <h3 class="text-md font-semibold text-gray-800 mb-1">Skill Assignment</h3>
-        <p class="text-sm text-gray-600">Find skills you should learn based on your goals.</p>
-      </a>
-  
-      <!-- Career Path -->
-      <a href="path.html" class="bg-white rounded-lg p-4 shadow hover:shadow-md transition block h-40">
-        <i data-lucide="map" class="w-6 h-6 text-blue-600 mb-1"></i>
-        <h3 class="text-md font-semibold text-gray-800 mb-1">Career Path</h3>
-        <p class="text-sm text-gray-600">Explore customized learning paths for your dream job.</p>
-      </a>
-  
-      <!-- Job Trends -->
-      <a href="job.html" class="bg-white rounded-lg p-4 shadow hover:shadow-md transition block h-40">
-        <i data-lucide="bar-chart-2" class="w-6 h-6 text-blue-600 mb-1"></i>
-        <h3 class="text-md font-semibold text-gray-800 mb-1">Job Trends</h3>
-        <p class="text-sm text-gray-600">Analyze the latest job market trends and top roles.</p>
-      </a>
-  
-      <!-- AI Recommendations -->
-      <a href="recommendations.html" class="bg-white rounded-lg p-4 shadow hover:shadow-md transition block h-40">
-        <i data-lucide="sparkles" class="w-6 h-6 text-blue-600 mb-1"></i>
-        <h3 class="text-md font-semibold text-gray-800 mb-1">AI Recommendations</h3>
-        <p class="text-sm text-gray-600">Get personalized recommendations for skills and jobs.</p>
-      </a>
-  
-      <!-- Resume Builder -->
-      <a href="resume.html" class="bg-white rounded-lg p-4 shadow hover:shadow-md transition block h-40">
-        <i data-lucide="file-text" class="w-6 h-6 text-blue-600 mb-1"></i>
-        <h3 class="text-md font-semibold text-gray-800 mb-1">Resume Builder</h3>
-        <p class="text-sm text-gray-600">Create a professional resume with ease.</p>
-      </a>
-  
+  <!-- Dashboard Content -->
+  <main class="flex-1 p-6">
+    <div class="bg-indigo-600 text-white rounded-xl p-6 shadow-lg mb-8">
+      <h1 class="text-3xl font-semibold">Welcome back, John!</h1>
+      <p class="text-indigo-100 mt-1">Your personalized AI-enhanced learning dashboard</p>
     </div>
 
-  
-  
+    <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+      <!-- Progress -->
+      <div class="bg-white rounded-xl shadow p-5 hover:shadow-lg transition">
+        <h2 class="text-lg font-semibold text-gray-800">Progress</h2>
+        <p class="text-sm text-gray-500">Skill Development</p>
+        <div class="w-full bg-gray-200 rounded-full h-3 mt-2">
+          <div class="bg-indigo-600 h-3 rounded-full w-[70%] transition-all duration-500"></div>
+        </div>
+      </div>
+
+      <!-- User Details -->
+      <div class="bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h2 class="text-lg font-semibold text-gray-800">User Details</h2>
+        <ul class="text-sm mt-2 text-gray-600 space-y-1">
+          <li><strong>Email:</strong> john@example.com</li>
+          <li><strong>Role:</strong> Frontend Developer</li>
+          <li><strong>Joined:</strong> Jan 2025</li>
+        </ul>
+      </div>
+
+      <!-- Suggested Step -->
+      <div class="bg-white rounded-xl shadow p-5 hover:shadow-lg">
+        <h2 class="text-lg font-semibold text-gray-800">Next Suggested Step</h2>
+        <p class="text-sm text-gray-600 mt-2">Finish “JavaScript DOM Projects” to unlock the React module.</p>
+      </div>
+
+      <!-- Achievements -->
+      <div class="bg-white rounded-xl shadow p-5 hover:shadow-lg relative">
+        <h2 class="text-lg font-semibold text-gray-800 flex justify-between items-center">
+          Achievements
+          <button class="text-indigo-600 text-sm font-medium hover:underline" onclick="addItem('achievement')">+ Add</button>
+        </h2>
+        <ul class="text-sm mt-2 text-gray-600 space-y-1" id="achievementsList">
+          <li>🏆 HTML & CSS Mastery</li>
+          <li>🚀 3 Mini Projects Completed</li>
+          <li>📘 80% Path Completion</li>
+        </ul>
+      </div>
+
+      <!-- Skills in Progress -->
+      <div class="bg-white rounded-xl shadow p-5 hover:shadow-lg relative">
+        <h2 class="text-lg font-semibold text-gray-800 flex justify-between items-center">
+          Skills in Progress
+          <button class="text-indigo-600 text-sm font-medium hover:underline" onclick="addItem('skills')">+ Add</button>
+        </h2>
+        <ul class="text-sm mt-2 text-gray-600 space-y-1" id="skillsList">
+          <li>🛠 JavaScript Basics</li>
+          <li>🧱 DOM Manipulation</li>
+          <li>⚛ React Introduction</li>
+        </ul>
+      </div>
+
+      <!-- Recent Activity -->
+      <div class="bg-white rounded-xl shadow p-5 hover:shadow-lg relative">
+        <h2 class="text-lg font-semibold text-gray-800 flex justify-between items-center">
+          Recent Activity
+          <button class="flex items-center text-indigo-600 text-sm font-medium hover:underline" onclick="openCalendar()">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 4h10M5 11h14M5 15h14M5 19h14" />
+            </svg>
+            Add
+          </button>
+        </h2>
+        <ul class="text-sm mt-2 text-gray-600 space-y-1" id="activityList">
+          <li>🗓 10 Apr – Submitted Portfolio Project</li>
+          <li>🗓 8 Apr – Completed CSS Grid Challenge</li>
+          <li>🗓 5 Apr – Attended “Build with HTML” workshop</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="mt-12 text-center text-sm text-gray-500">
+      © 2025 NEXT ROLE. All rights reserved.
+    </footer>
+  </main>
+
+  <!-- Calendar Modal -->
+  <div id="calendarModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50">
+    <div class="bg-white rounded-lg p-6 w-full max-w-sm shadow-xl">
+      <h3 class="text-lg font-semibold mb-4">Add Recent Activity</h3>
+      <input type="date" id="activityDate" class="border rounded p-2 w-full mb-3" />
+      <input type="text" id="activityDesc" placeholder="Describe the activity..." class="border rounded p-2 w-full mb-4" />
+      <div class="flex justify-end space-x-2">
+        <button onclick="closeCalendar()" class="px-4 py-2 bg-gray-200 rounded hover:bg-gray-300">Cancel</button>
+        <button onclick="saveActivity()" class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Add</button>
+      </div>
+    </div>
   </div>
 
-</main>
+  <script>
+    lucide.createIcons();
 
-<script>
-  lucide.createIcons();
-</script>
+    function addItem(type) {
+      const item = prompt(`Add a new ${type === 'achievement' ? 'achievement' : 'skill'}:`);
+      if (item) {
+        const ul = document.getElementById(type === 'achievement' ? 'achievementsList' : 'skillsList');
+        const li = document.createElement('li');
+        li.textContent = type === 'achievement' ? `🏅 ${item}` : `📌 ${item}`;
+        ul.appendChild(li);
+      }
+    }
+
+    function openCalendar() {
+      document.getElementById("calendarModal").classList.remove("hidden");
+    }
+
+    function closeCalendar() {
+      document.getElementById("calendarModal").classList.add("hidden");
+    }
+
+    function saveActivity() {
+      const date = document.getElementById("activityDate").value;
+      const desc = document.getElementById("activityDesc").value;
+
+      if (date && desc) {
+        const ul = document.getElementById("activityList");
+        const li = document.createElement("li");
+        const formattedDate = new Date(date).toLocaleDateString('en-GB', { day: '2-digit', month: 'short' });
+        li.textContent = `🗓 ${formattedDate} – ${desc}`;
+        ul.appendChild(li);
+
+        closeCalendar();
+        document.getElementById("activityDate").value = '';
+        document.getElementById("activityDesc").value = '';
+      } else {
+        alert("Please fill in both date and description.");
+      }
+    }
+  </script>
 </body>
 </html>
+
