--- a/index.html
+++ b/index.html
@@ -6,21 +6,12 @@
   <title>NEXT ROLE MVP</title>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @keyframes marquee {
-      0% { transform: translateX(100%); }
-      100% { transform: translateX(-100%); }
-    }
-    .animate-marquee {
-      animation: marquee 15s linear infinite;
-    }
-  </style>
 </head>
 <body class="min-h-screen flex flex-col bg-white">
 
   <!-- Header -->
-  <header class="bg-white shadow-sm py-4 px-6 flex items-center justify-between sticky top-0 z-10">
-    <h1 class="text-xl font-bold text-indigo-600">NEXT ROLE</h1>
+  <header class="bg-white shadow-md py-4 px-6 flex items-center justify-between sticky top-0 z-10">
+    <h1 class="text-2xl font-extrabold text-indigo-600">NEXT ROLE</h1>
     <button id="menuToggle" class="text-gray-700" onclick="toggleSidebar()">
       <i data-lucide="menu" class="h-6 w-6"></i>
     </button>
@@ -28,10 +19,7 @@
 
   <!-- Sidebar -->
   <div id="sidebar" class="fixed inset-0 z-30 hidden">
-    <!-- Overlay -->
     <div class="absolute inset-0 bg-black bg-opacity-50" onclick="toggleSidebar()"></div>
-    
-    <!-- Sidebar Menu -->
     <div class="absolute right-0 top-0 h-full w-64 bg-white shadow-lg p-6 space-y-4 overflow-y-auto">
       <div class="flex justify-between items-center mb-6">
         <h2 class="text-lg font-semibold">Menu</h2>
@@ -52,63 +40,99 @@
     </div>
   </div>
 
-  <!-- Main -->
+  <!-- Main Content -->
   <main class="flex-1 p-6">
-    <div class="relative overflow-hidden rounded-lg bg-white shadow-lg mb-8">
-      <div class="absolute inset-0 bg-gradient-to-r from-blue-500 to-purple-600 opacity-90"></div>
-      <div class="relative p-8">
-        <h2 class="text-4xl font-bold text-white mb-4 animate-marquee whitespace-nowrap">
-          Welcome to NEXT ROLE - The Future of Career Development
-        </h2>
-        <p class="text-white text-lg max-w-2xl">
-          Discover your next career move with our smart platform tailored to your skills and goals.
-        </p>
-      </div>
-    </div>
 
-    <div class="bg-white border shadow rounded-lg p-6">
-      <h2 class="text-xl font-semibold mb-4">Your Career Journey Starts Here</h2>
-      <div class="grid md:grid-cols-2 gap-6">
-        <div>
-          <p class="text-gray-700 mb-4">
-            Our AI-driven system analyzes your resume, skills, and preferences to find the best-fit career options.
-          </p>
-          <p class="text-gray-700 mb-6">
-            Whether you're advancing or switching roles, NEXT ROLE is your trusted guide.
-          </p>
-          <a href="login.html" class="bg-blue-600 text-white hover:bg-blue-700 text-lg px-6 py-3 rounded-lg font-semibold shadow-md transition duration-300 ease-in-out">
-            Get Started
-          </a>
-        </div>
-        <div class="flex justify-center items-center">
-          <div class="bg-gray-100 border-2 border-dashed rounded-xl w-full h-64 flex items-center justify-center text-gray-400">
-            [ Image / Video / Animation ]
+    <!-- Hero Section -->
+    <section class="bg-blue-50 py-12 rounded-xl shadow-lg px-6 text-center">
+      <h2 class="text-4xl font-extrabold text-indigo-700 mb-4">Welcome to NEXT ROLE</h2>
+      <p class="text-lg text-gray-700 mb-6 max-w-2xl mx-auto">
+        Discover your next career move with our smart platform tailored to your skills and goals.
+      </p>
+      <a href="login.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-8 py-3 rounded-lg font-semibold shadow-md transition duration-300 ease-in-out">
+        Get Started
+      </a>
+    </section>
+
+    <!-- Key Features -->
+    <section class="mt-16">
+      <h2 class="text-2xl font-bold text-center text-indigo-700 mb-10">Our Key Features</h2>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-indigo-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-indigo-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="activity" class="w-6 h-6"></i>
           </div>
+          <h3 class="text-xl font-semibold text-indigo-700 mb-2">Skill Assessment</h3>
+          <p class="text-gray-600">Evaluate your strengths with AI-powered assessments to uncover hidden potential.</p>
+        </div>
+        <div class="bg-blue-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-blue-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="user" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-blue-700 mb-2">Personalized Career Paths</h3>
+          <p class="text-gray-600">Customized career suggestions based on your preferences and goals.</p>
+        </div>
+        <div class="bg-purple-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-purple-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="map" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-purple-700 mb-2">Path Recommender</h3>
+          <p class="text-gray-600">Explore the right direction with intelligent pathfinding tailored to your future.</p>
+        </div>
+        <div class="bg-teal-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-teal-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="briefcase" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-teal-700 mb-2">Job Matcher</h3>
+          <p class="text-gray-600">Smart job matching engine connects you to the most relevant opportunities.</p>
+        </div>
+        <div class="bg-green-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-green-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="line-chart" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-green-700 mb-2">Market Trends</h3>
+          <p class="text-gray-600">Stay updated with real-time labor market insights and salary data.</p>
+        </div>
+        <div class="bg-yellow-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-yellow-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="file-text" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-yellow-700 mb-2">Resume Builder</h3>
+          <p class="text-gray-600">Craft beautiful, ATS-friendly resumes with guided assistance.</p>
+        </div>
+        <div class="bg-red-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-red-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="check-circle" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-red-700 mb-2">Interview Prep</h3>
+          <p class="text-gray-600">Get AI-powered interview tips and practice with mock questions.</p>
+        </div>
+        <div class="bg-pink-100 p-6 rounded-2xl shadow-md text-center hover:shadow-lg transition">
+          <div class="bg-pink-600 text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-4">
+            <i data-lucide="settings" class="w-6 h-6"></i>
+          </div>
+          <h3 class="text-xl font-semibold text-pink-700 mb-2">Profile Optimization</h3>
+          <p class="text-gray-600">Enhance your online professional presence across job platforms.</p>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-50 py-4 px-6 border-t mt-10">
-    <p class="text-center text-gray-600 text-sm">
-      © <span id="year"></span> NEXT ROLE. All rights reserved.
-    </p>
+  <footer class="bg-gray-50 py-6 mt-12 border-t text-center">
+    <p class="text-sm text-gray-600">© <span id="year"></span> NEXT ROLE. All rights reserved.</p>
   </footer>
 
   <!-- Scripts -->
   <script>
-    // Initialize icons
     lucide.createIcons();
 
-    // Sidebar toggle
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
       sidebar.classList.toggle('hidden');
-      lucide.createIcons(); // Refresh icons when HTML changes
+      lucide.createIcons();
     }
 
-    // Set current year in footer
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
