--- a/market.html
+++ b/market.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Market Analysis | NEXT ROLE</title>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Market Trends - Skills & Job Opportunities</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-blue-50 p-6">
-  <div class="max-w-4xl mx-auto bg-white p-8 rounded-lg shadow">
-    <h2 class="text-2xl font-bold text-blue-700 mb-6">Skill Market Analysis (2021–2025)</h2>
 
-    <label for="skillSelect" class="block mb-2 font-medium">Select a Skill:</label>
-    <select id="skillSelect" class="w-full p-2 border rounded mb-6">
-      <option disabled selected value="">-- Select Skill --</option>
-      <option>React</option>
-      <option>Python</option>
-      <option>Java</option>
-      <option>SQL</option>
-      <option>JavaScript</option>
-      <option>Node.js</option>
-      <option>Cybersecurity</option>
-      <option>Cloud Computing</option>
-      <option>Data Science</option>
-      <option>Flutter</option>
-    </select>
+<body class="bg-gradient-to-br from-blue-50 to-white min-h-screen font-sans text-gray-800">
 
-    <div id="result" class="space-y-6 hidden">
-      <div>
-        <h3 class="text-lg font-semibold text-gray-800">📈 Growth Over 5 Years:</h3>
-        <canvas id="growthChart" class="mt-2"></canvas>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold text-gray-800">🏢 Top Hiring Companies:</h3>
-        <ul id="companies" class="list-disc pl-6 text-gray-700"></ul>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold text-gray-800">💰 Highest Package:</h3>
-        <p id="salary" class="text-green-600 font-medium"></p>
-      </div>
-      <div>
-        <h3 class="text-lg font-semibold text-gray-800">🤖 AI Tips:</h3>
-        <p id="tips" class="text-gray-700"></p>
-      </div>
+  <!-- Header -->
+  <header class="bg-blue-700 text-white py-6 shadow-lg">
+    <div class="container mx-auto text-center">
+      <h1 class="text-3xl md:text-4xl font-extrabold">Market Trends: Skills & Job Opportunities</h1>
+      <p class="mt-2 text-blue-100 text-sm md:text-base">Stay updated with the most in-demand skills from 2020 to 2025</p>
     </div>
-  </div>
+  </header>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <!-- Main Content -->
+  <main class="container mx-auto px-4 py-10">
+
+    <!-- Search Section -->
+    <section class="mb-12 bg-white p-6 rounded-xl shadow-md">
+      <h2 class="text-xl md:text-2xl font-semibold mb-4">🔍 Search for a Skill</h2>
+      <div class="flex flex-col md:flex-row md:items-center gap-4">
+        <input id="skillInput" type="text"
+          class="flex-1 px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500 focus:outline-none"
+          placeholder="E.g. Data Science, UI/UX Design, Cloud Computing..." />
+        <button onclick="searchSkill()"
+          class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">
+          Search
+        </button>
+      </div>
+    </section>
+
+    <!-- Skill Details -->
+    <section id="resultsSection" class="hidden mb-12">
+      <h2 class="text-2xl font-bold mb-4">📘 Skill Details</h2>
+      <div id="skillDetails"
+        class="bg-white p-6 rounded-xl shadow-lg border border-blue-100 transition-all duration-300">
+        <!-- Skill details will be injected here -->
+      </div>
+    </section>
+
+    <!-- Top Trending Skills -->
+    <section>
+      <h2 class="text-2xl font-bold mb-6">🔥 Top 25 Trending Skills (2020–2025)</h2>
+      <ul id="skillsList"
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-sm">
+        <!-- Skills will be dynamically populated here -->
+        <!-- Example Card (for demo purpose) -->
+        <!--
+        <li class="bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+          <h3 class="text-lg font-semibold">Skill Name</h3>
+          <p class="text-gray-500 mt-1">Brief info or popularity rating</p>
+        </li>
+        -->
+      </ul>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-blue-50 border-t mt-12 py-6 text-center text-sm text-gray-500">
+    © 2025 <span class="font-semibold text-blue-700">NEXT ROLE</span> — All Rights Reserved
+  </footer>
+
+  <!-- Script -->
   <script src="market.js"></script>
 </body>
+
 </html>
