--- a/reset_password.html
+++ b/reset_password.html
@@ -10,23 +10,82 @@
 
   <div class="w-full max-w-md bg-white p-8 rounded-lg shadow-lg">
     <h1 class="text-3xl font-bold text-center text-blue-700 mb-4">NEXT ROLE</h1>
-    <h2 class="text-xl font-semibold text-center text-gray-800 mb-6">Reset Password</h2>
+    <h2 class="text-xl font-semibold text-center text-gray-800 mb-6">Reset Your Password</h2>
 
-    <form class="space-y-4">
-      <input type="email" placeholder="Enter your registered email" required
-        class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" />
+    <form id="resetForm" class="space-y-4">
+      <input 
+        id="emailInput"
+        type="email" 
+        placeholder="Enter your registered email" 
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+      />
       
-      <button type="submit"
-        class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 font-semibold">
+      <button
+        type="submit"
+        class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 font-semibold"
+      >
         Send Reset Link
       </button>
     </form>
 
+    <p id="message" class="mt-4 text-center text-sm text-gray-600"></p>
+
     <p class="mt-4 text-center text-sm text-gray-600">
       Remember your password? 
-      <a href="/login" class="text-blue-600 font-medium hover:underline">Login</a>
+      <a href="/login.html" class="text-blue-600 font-medium hover:underline">Login</a>
     </p>
   </div>
+
+  <script>
+    const resetForm = document.getElementById('resetForm');
+    const emailInput = document.getElementById('emailInput');
+    const messageBox = document.getElementById('message');
+
+    // Function to get the JWT token (from localStorage or sessionStorage)
+    function getAuthToken() {
+      return localStorage.getItem('authToken') || sessionStorage.getItem('authToken');
+    }
+
+    resetForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      messageBox.textContent = "Sending reset link...";
+      messageBox.classList.remove('text-red-600', 'text-green-600'); // Reset message styles
+
+      const token = getAuthToken(); // Get JWT token from localStorage/sessionStorage
+
+      if (!token) {
+        messageBox.textContent = "You must be logged in to request a password reset.";
+        messageBox.classList.add('text-red-600');
+        return;
+      }
+
+      try {
+        const response = await fetch('http://localhost:5000/api/forgot-password', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${token}`, // Send JWT token in Authorization header
+          },
+          body: JSON.stringify({ email: emailInput.value })
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          messageBox.textContent = data.message || "Reset link sent successfully. Please check your inbox.";
+          messageBox.classList.add('text-green-600');
+        } else {
+          messageBox.textContent = data.message || "Failed to send reset link. Please try again.";
+          messageBox.classList.add('text-red-600');
+        }
+      } catch (err) {
+        console.error(err);
+        messageBox.textContent = "Something went wrong. Please try again later.";
+        messageBox.classList.add('text-red-600');
+      }
+    });
+  </script>
 
 </body>
 </html>
