--- a/market.html
+++ b/market.html
@@ -2,73 +2,59 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Market Trends - Skills & Job Opportunities</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trending Skills - Next Role</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="market.js"></script>
 </head>
 
-<body class="bg-gradient-to-br from-blue-50 to-white min-h-screen font-sans text-gray-800">
+<body class="bg-gradient-to-r from-blue-50 to-white text-gray-800 font-sans">
 
-  <!-- Header -->
-  <header class="bg-blue-700 text-white py-6 shadow-lg">
-    <div class="container mx-auto text-center">
-      <h1 class="text-3xl md:text-4xl font-extrabold">Market Trends: Skills & Job Opportunities</h1>
-      <p class="mt-2 text-blue-100 text-sm md:text-base">Stay updated with the most in-demand skills from 2020 to 2025</p>
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <main class="container mx-auto px-4 py-10">
+  <!-- Container -->
+  <div class="container mx-auto p-6">
+    
+    <!-- Header -->
+    <header class="text-center mb-10">
+      <h1 class="text-4xl font-bold text-gray-900 leading-tight">Top Trending Skills in Tech</h1>
+      <p class="text-lg text-gray-600 mt-2">Explore the most sought-after skills in the tech industry and jumpstart your career!</p>
+    </header>
 
     <!-- Search Section -->
-    <section class="mb-12 bg-white p-6 rounded-xl shadow-md">
-      <h2 class="text-xl md:text-2xl font-semibold mb-4">🔍 Search for a Skill</h2>
-      <div class="flex flex-col md:flex-row md:items-center gap-4">
+    <div class="flex justify-center items-center mb-8">
+      <div class="flex w-full max-w-xl items-center p-2 bg-white border border-gray-300 rounded-full shadow-lg">
         <input id="skillInput" type="text"
-          class="flex-1 px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:ring-2 focus:ring-blue-500 focus:outline-none"
-          placeholder="E.g. Data Science, UI/UX Design, Cloud Computing..." />
+          class="flex-grow px-6 py-2 text-lg text-gray-700 rounded-l-full focus:outline-none focus:ring-2 focus:ring-blue-400"
+          placeholder="Search for a skill...">
         <button onclick="searchSkill()"
-          class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg hover:bg-blue-700 transition">
+          class="px-6 py-2 bg-blue-500 text-white font-semibold rounded-r-full hover:bg-blue-600 transition duration-300">
           Search
         </button>
       </div>
-    </section>
+    </div>
 
-    <!-- Skill Details -->
-    <section id="resultsSection" class="hidden mb-12">
-      <h2 class="text-2xl font-bold mb-4">📘 Skill Details</h2>
-      <div id="skillDetails"
-        class="bg-white p-6 rounded-xl shadow-lg border border-blue-100 transition-all duration-300">
-        <!-- Skill details will be injected here -->
-      </div>
-    </section>
-
-    <!-- Top Trending Skills -->
-    <section>
-      <h2 class="text-2xl font-bold mb-6">🔥 Top 25 Trending Skills (2020–2025)</h2>
-      <ul id="skillsList"
-        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 text-sm">
-        <!-- Skills will be dynamically populated here -->
-        <!-- Example Card (for demo purpose) -->
-        <!--
-        <li class="bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
-          <h3 class="text-lg font-semibold">Skill Name</h3>
-          <p class="text-gray-500 mt-1">Brief info or popularity rating</p>
-        </li>
-        -->
+    <!-- Skills List Section -->
+    <section class="mb-10">
+      <h2 class="text-3xl font-semibold text-gray-900 mb-6">Top Trending Skills</h2>
+      <ul id="skillsList" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
+        <!-- Skill items will be dynamically inserted here -->
       </ul>
     </section>
 
-  </main>
+    <!-- Skill Details Section -->
+    <section id="resultsSection" class="hidden">
+      <h2 class="text-3xl font-semibold text-gray-900 mb-6">Skill Details</h2>
+      <div id="skillDetails" class="p-8 bg-white rounded-xl shadow-lg border border-blue-100">
+        <!-- Skill details will be dynamically inserted here -->
+      </div>
+    </section>
+  </div>
 
   <!-- Footer -->
-  <footer class="bg-blue-50 border-t mt-12 py-6 text-center text-sm text-gray-500">
-    © 2025 <span class="font-semibold text-blue-700">NEXT ROLE</span> — All Rights Reserved
+  <footer class="bg-blue-700 text-white text-center py-6 mt-12">
+    <p class="text-lg">© 2025 NEXT ROLE — All Rights Reserved</p>
   </footer>
 
-  <!-- Script -->
-  <script src="market.js"></script>
 </body>
 
 </html>
